# RustyChat

./: Cargo.toml  README.md  package.json
src/: constants.rs  main.rs
src/client/: forein_agent.rs  mod.rs  ratchet.rs  save.rs  serverhandlers.rs  state.rs
src/gui/: build.rs  events.rs  main_loop.rs  mod.rs  ui_loop.rs
src/messaging/: firebase.rs  mod.rs  socket.rs
src/pug/: index.pug
src/rust/: constants.rs  main.rs
src/rust/client/: build_ui.rs  forein_agent.rs  mod.rs  ratchet.rs  save.rs  serverhandlers.rs  sign_in.rs  state.rs  store.rs  utils.rs
src/rust/gui/: build.rs  events.rs  main_loop.rs  mod.rs  sign_in.rs
x25519-dalek/: Cargo.toml
