[package]
name = "yakking_yak"
license = "MPL-2.0"
version = "0.1.0"
authors = ["BoisterousCoder <boisterouscoder@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
serde = {version = "~1.0",  features = ["derive"]}
serde_json = "~1.0"
base64 = "~0.22"
x25519-dalek = {path="x25519-dalek"}
rand_core="~0.6"
rand_chacha = "~0.3"
aes-gcm = "~0.10"
hkdf = "~0.12"
sha2 = "~0.10"
chrono = "~0.4"
k256="~0.13"
magic-crypt = "~3.1"
getrandom = { version = "0.2", features = ["js"] }

gtk = { version = "*", package = "gtk4", features = ["v4_6"] }
adw = { version = "~0.6", package = "libadwaita", features = ["v1_1"] }
glib = "~0.19"
glib-macros = "~0.19"
lazy_static = "~1.5"
crossbeam-queue = "~0.3"


webrtc = "~0.11"
firebase-rs = "~2.1"
futures-executor = "~0.3"
tokio = { version = "~1.38" }